--- a/billing.html
+++ b/billing.html
@@ -32,12 +32,12 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item my-auto mx-4 dropdown">
-              <a class="nav-link" href="FrontPage.html">Home</a>
+              <a class="nav-link" href="home.html">Home</a>
             </li>
             <li class="nav-item my-auto mx-4 dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"> Courier </a>
               <ul class="dropdown-menu animate slideIn">
-                <li><a class="dropdown-item fw-bolder bb" href="1.1.2 CreateShipment.html">Create Shipment</a></li>
+                <li><a class="dropdown-item fw-bolder bb" href="awb.html">Create Shipment</a></li>
                 <li><a class="dropdown-item fw-bolder bb" href="#">Upload File</a></li>
                 <li><a class="dropdown-item fw-bolder" href="#">Print AWB</a></li>
               </ul>
@@ -45,21 +45,21 @@
             <li class="nav-item my-auto mx-4 dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"> Price Simulation </a>
               <ul class="dropdown-menu animate slideIn">
-                <li><a class="dropdown-item fw-bolder bb" href="1.1.1.International.html">International Courier</a></li>
-                <li><a class="dropdown-item fw-bolder bb" href="1.1.1.Domestic.html">Domestic Courier</a></li>
-                <li><a class="dropdown-item fw-bolder bb" href="1.1.1.AirCargo.html">International Air Cargo</a></li>
+                <li><a class="dropdown-item fw-bolder bb" href="simulation.html">International Courier</a></li>
+                <li><a class="dropdown-item fw-bolder bb" href="simulation_domestic..html">Domestic Courier</a></li>
+                <li><a class="dropdown-item fw-bolder bb" href="simulation_air_cargo.html">International Air Cargo</a></li>
                 <li><a class="dropdown-item fw-bolder" href="#">International Sea Cargo</a></li>
               </ul>
             </li>
             <li class="nav-item my-auto mx-4 dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"> Shipment Summary </a>
               <ul class="dropdown-menu animate slideIn">
-                <li><a class="dropdown-item fw-bolder bb" href="1.1.3.Manifest.html">Manifesting</a></li>
+                <li><a class="dropdown-item fw-bolder bb" href="manifest.html">Manifesting</a></li>
                 <li><a class="dropdown-item fw-bolder" href="#">Tracking</a></li>
               </ul>
             </li>
             <li class="nav-item my-auto mx-4">
-              <a class="nav-link" href="#">Billing Summary</a>
+              <a class="nav-link" href="billing.html">Billing Summary</a>
             </li>
             <li class="nav-item my-auto mx-4 dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"> Download Quotation & SLA</a>
@@ -71,8 +71,11 @@
                 <li><a class="dropdown-item fw-bolder" href="#">Download SLA (Service Level Agreement)</a></li>
               </ul>
             </li>
-            <li class="nav-item my-auto mx-4">
-              <a class="nav-link" href="#"><img src="images/ikon-pala.png" alt="login icon" style="width: 50px" /></a>
+            <li class="nav-item my-auto mx-4 dropdown">
+              <a class="nav-link dropdown-togglex" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"><img src="images/ikon-pala.png" alt="login icon" style="width: 50px" /></a>
+              <ul class="dropdown-menu animate slideIn">
+                <li><a class="dropdown-item fw-bolder" href="index.html">Logout</a></li>
+              </ul>
             </li>
           </ul>
         </div>
