--- a/home.html
+++ b/home.html
@@ -93,7 +93,7 @@
             <li class="nav-item my-auto mx-4 dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"> Courier </a>
               <ul class="dropdown-menu animate slideIn">
-                <li><a class="dropdown-item fw-bolder bb" href="1.1.2 CreateShipment.html">Create Shipment</a></li>
+                <li><a class="dropdown-item fw-bolder bb" href="awb.html">Create Shipment</a></li>
                 <li><a class="dropdown-item fw-bolder bb" href="#">Upload File</a></li>
                 <li><a class="dropdown-item fw-bolder" href="#">Print AWB</a></li>
               </ul>
@@ -101,21 +101,21 @@
             <li class="nav-item my-auto mx-4 dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"> Price Simulation </a>
               <ul class="dropdown-menu animate slideIn">
-                <li><a class="dropdown-item fw-bolder bb" href="1.1.1.International.html">International Courier</a></li>
-                <li><a class="dropdown-item fw-bolder bb" href="1.1.1.Domestic.html">Domestic Courier</a></li>
-                <li><a class="dropdown-item fw-bolder bb" href="1.1.1.AirCargo.html">International Air Cargo</a></li>
+                <li><a class="dropdown-item fw-bolder bb" href="simulation.html">International Courier</a></li>
+                <li><a class="dropdown-item fw-bolder bb" href="simulation_domestic..html">Domestic Courier</a></li>
+                <li><a class="dropdown-item fw-bolder bb" href="simulation_air_cargo.html">International Air Cargo</a></li>
                 <li><a class="dropdown-item fw-bolder" href="#">International Sea Cargo</a></li>
               </ul>
             </li>
             <li class="nav-item my-auto mx-4 dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"> Shipment Summary </a>
               <ul class="dropdown-menu animate slideIn">
-                <li><a class="dropdown-item fw-bolder bb" href="1.1.3.Manifest.html">Manifesting</a></li>
+                <li><a class="dropdown-item fw-bolder bb" href="manifest.html">Manifesting</a></li>
                 <li><a class="dropdown-item fw-bolder" href="#">Tracking</a></li>
               </ul>
             </li>
             <li class="nav-item my-auto mx-4">
-              <a class="nav-link" href="1.1.3.Billing.html">Billing Summary</a>
+              <a class="nav-link" href="billing.html">Billing Summary</a>
             </li>
             <li class="nav-item my-auto mx-4 dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"> Download Quotation & SLA</a>
@@ -146,7 +146,7 @@
           <div class="ma">
             <div class="row justify-content-center">
               <div class="col-5 col-sm-10 col-lg-10 p-3">
-                <a href="1.1.2 CreateShipment.html"><button type="button" class="btn tombol" id="">Create Shipment</button></a>
+                <a href="awb.html"><button type="button" class="btn tombol" id="">Create Shipment</button></a>
               </div>
               <div class="col-5 col-sm-10 col-lg-10 p-3">
                 <div class="btn-group dropend">
