--- a/simulation.html
+++ b/simulation.html
@@ -386,16 +386,16 @@
               <input class="form-control" type="text" id="post_code" name="post_code" />
             </div>
           </div>
-          <!-- <div class="row mb-3">
-            <label class="col-2 col-form-label label">Type</label>
-            <div class="col-3">
-              <select class="form-select" id="service_rjm" name="service_rjm" required>
+          <div class="row mb-3">
+            <label class="col-lg-2 col-md-3 col-form-label label">Type</label>
+            <div class="col-lg-3 col-md-4 my-auto">
+              <select class="form-select" id="service" name="service" required>
                 <option selected disabled>Choose Destination</option>
                 <option value="D">Document</option>
                 <option value="ND">Package</option>
               </select>
             </div>
-          </div> -->
+          </div>
           <!-- SIMULATE RJM -->
           <div class="row disini_rjm pt-3">
             <div class="col-lg-3 col-md-6 g-0">
