--- a/awb.html
+++ b/awb.html
@@ -18,7 +18,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/awb_mobile.css" />
-    <link rel="stylesheet" href="css/awb_nav.css" />
+    <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/awb_scrollspy.css" />
     <link rel="stylesheet" href="css/awb_style.css" />
 
