--- a/manifest.html
+++ b/manifest.html
@@ -15,7 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="css/manifest_nav.css" />
+    <link rel="stylesheet" href="css/nav.css" />
+
     <link rel="stylesheet" href="css/manifest_style.css" />
 
     <style></style>
