--- a/awb.html
+++ b/awb.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <!-- NAV -->
-    <nav class="navbar navbar-expand-lg navbar-dark no-print" id="nav2">
+    <nav class="navbar navbar-expand-lg navbar-dark no-print" id="nav">
       <div class="container-fluid" style="width: 95%">
         <a class="navbar-brand" href="#"><img class="ray-logo" src="images/logo white 1edited.png" alt="Rayspeed logo" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
@@ -959,7 +959,7 @@
             <!-- EXT -->
           </div>
           <div class="col-md-4 col-lg-3">
-            <nav class="section-nav" id="nav">
+            <nav class="section-nav" id="nav2">
               <ol>
                 <li><a href="#shipref">1. Shipper Reference</a></li>
                 <li><a href="#sertyp">2. Service Type</a></li>
