--- a/manifest.html
+++ b/manifest.html
@@ -16,7 +16,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="css/nav.css" />
-
     <link rel="stylesheet" href="css/manifest_style.css" />
 
     <style></style>
@@ -25,7 +24,7 @@
   </head>
   <body>
     <!-- NAV -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark" id="nav">
       <div class="container-fluid" style="width: 95%">
         <a class="navbar-brand" href="#"><img class="ray-logo" src="images/logo white 1edited.png" alt="Rayspeed logo" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
