--- a/simulation.html
+++ b/simulation.html
@@ -62,7 +62,7 @@
   </head>
   <body>
     <!-- NAV -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark" id="nav">
       <div class="container-fluid" style="width: 95%">
         <a class="navbar-brand" href="#"><img class="ray-logo" src="images/logo white 1edited.png" alt="Rayspeed logo" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
