--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
   </head>
   <body style="background-image: url('images/corporate2.png'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed">
     <!-- NAV -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark" id="nav">
       <div class="container-fluid" style="width: 95%">
         <a class="navbar-brand" href="#"><img class="ray-logo" src="images/logo white 1edited.png" alt="Rayspeed logo" /></a>
         <li class="nav-item dropdown ms-auto d-flex align-items-center d-lg-none d-xl-none" style="list-style: none">
