--- a/awb.html
+++ b/awb.html
@@ -1162,6 +1162,33 @@
     </div>
 
     <!-- JS -->
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $("#company_code_dropdown").on("change", function () {
+          let data = $("#company_code_dropdown option:selected").val();
+          $.ajax({
+            url: "awb_ajax.php",
+            type: "get",
+            dataType: "json",
+            cache: false,
+            data: "data=" + data,
+            success: function (hasil) {
+              $("#company_code").val(hasil.kode);
+              $("#company").val(hasil.company);
+              $("#address").val(hasil.address);
+              $("#cpa").val(hasil.cpa);
+              $("#postcode").val(hasil.postcode);
+              $("#country").val(hasil.country);
+              $("#pic").val(hasil.pic);
+              $("#pfe").val(hasil.pfe);
+              $("#email").val(hasil.email);
+
+              // servicenya(hasil[4]);
+            }, // success
+          }); // ajax
+        });
+      });
+    </script>
 
     <script src="js/jfcc.js"></script>
     <script src="js/awb_script.js"></script>
