--- a/home.html
+++ b/home.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -17,7 +16,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
     <!--JQ-->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/nav.css" />
@@ -27,10 +28,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
 
     <style>
-      body {
-        overflow-y: auto;
-        overflow-x: auto;
-      }
       .select2-container--default .select2-selection--single .select2-selection__arrow {
         height: 43px;
         position: absolute;
@@ -489,29 +486,6 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="row justify-content-center">
-              <div class="col-5 col-lg-3 pb-2 tampil-jfcc">
-                <label class="tekss text-white" style="float: left">Berat</label>
-                <input class="form-control" type="text" name="berat_jfcc[]" placeholder="XXXX" />
-              </div>
-              <div class="col-5 col-lg-3 pb-2 tampil-jfcc">
-                <div>
-                  <label class="tekss text-white" style="float: left">Panjang</label>
-                  <input class="form-control" type="text" name="panjang_jfcc[]" placeholder="XXXX" />
-                </div>
-              </div>
-              <div class="col-5 col-lg-3 pb-2 tampil-jfcc">
-                <label class="tekss text-white" style="float: left">Tinggi</label>
-                <input class="form-control" type="text" name="tinggi_jfcc[]" placeholder="XXXX" />
-              </div>
-              <div class="col-5 col-lg-3 pb-2 tampil-jfcc">
-                <div>
-                  <label class="tekss text-white" style="float: left">Lebar</label>
-                  <input class="form-control" type="text" name="lebar_jfcc[]" placeholder="XXXX" />
-                </div>
-              </div>
-            </div> -->
-
             <div class="row pt-3">
               <div class="col-12 text-center"><button type="button" class="btn tombol2">Submit</button></div>
             </div>
