--- a/simulation.html
+++ b/simulation.html
@@ -694,6 +694,9 @@
       });
     </script>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="../speedship/vendor/select2/js/select2.min.js"></script>
     <script src="js/simulation_cloner.js"></script>
     <script src="js/jfcc.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
