--- a/simulation_air_cargo.html
+++ b/simulation_air_cargo.html
@@ -86,7 +86,7 @@
               </ul>
             </li>
             <li class="nav-item my-auto mx-4 dropdown">
-              <a class="nav-link dropdown-togglex" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"><img src="images/ikon-pala.png" alt="login icon" style="width: 50px" /></a>
+              <a class="nav-link dropdown-togglex" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"><img src="images/ikon-pala.png" alt="login icon" class="login-icon" /></a>
               <ul class="dropdown-menu animate slideIn">
                 <li><a class="dropdown-item fw-bolder" href="index.html">Logout</a></li>
               </ul>
