--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"> Price Simulation </a>
               <ul class="dropdown-menu animate slideIn">
                 <li><a class="dropdown-item fw-bolder bb" href="simulation.html">International Courier</a></li>
-                <li><a class="dropdown-item fw-bolder bb" href="simulation_domestic..html">Domestic Courier</a></li>
+                <li><a class="dropdown-item fw-bolder bb" href="simulation_domestic.html">Domestic Courier</a></li>
                 <li><a class="dropdown-item fw-bolder bb" href="simulation_air_cargo.html">International Air Cargo</a></li>
                 <li><a class="dropdown-item fw-bolder" href="#">International Sea Cargo</a></li>
               </ul>
