--- a/manifest.html
+++ b/manifest.html
@@ -47,7 +47,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"> Price Simulation </a>
               <ul class="dropdown-menu animate slideIn">
                 <li><a class="dropdown-item fw-bolder bb" href="simulation.html">International Courier</a></li>
-                <li><a class="dropdown-item fw-bolder bb" href="simulation_domestic..html">Domestic Courier</a></li>
+                <li><a class="dropdown-item fw-bolder bb" href="simulation_domestic.html">Domestic Courier</a></li>
                 <li><a class="dropdown-item fw-bolder bb" href="simulation_air_cargo.html">International Air Cargo</a></li>
                 <li><a class="dropdown-item fw-bolder" href="#">International Sea Cargo</a></li>
               </ul>
@@ -88,23 +88,23 @@
       <div class="row justify-content-center title mb-3">Manifest Summary</div>
       <div class="mb-3 row">
         <!-- <label class="col-sm-1 col-form-labe text-center">From</label> -->
-        <div class="col-sm-2 center">
+        <div class="col-md-4 col-lg-2 center">
           <input type="date" class="form-control" id="" />
         </div>
       </div>
       <div class="mb-3 row">
         <!-- <label class="col-sm-1 col-form-label text-center">From</label> -->
-        <div class="col-sm-2 center">
+        <div class="col-md-4 col-lg-2 center">
           <input type="date" class="form-control" id="" />
         </div>
       </div>
-      <div class="mb-3 row col-sm-1 mx-auto">
+      <div class="mb-3 row col-md-2 col-lg-1 mx-auto">
         <button type="button" class="btn btn3">Check</button>
       </div>
 
       <div class="row">
-        <label for="" class="text-end col-1 col-form-label">Search</label>
-        <div class="col-2">
+        <label for="" class="text-end col-2 col-lg-1 col-form-label">Search</label>
+        <div class="col-4 col-md-3 col-lg-2">
           <input class="form-control" type="text" placeholder="Search" />
         </div>
         <div class="col-1">
