--- a/billing.html
+++ b/billing.html
@@ -83,11 +83,22 @@
     </nav>
     <!-- NAV -->
     <!-- HEAD -->
-    <div class="container-fluid pt-3">
-      <div class="row justify-content-center title">Shipment Recapitulation & Billing Summary</div>
-      <div class="row justify-content-center">
-        <div class="col-2 text-end">From : 13 September 2021</div>
-        <div class="col-2 text-start">From : 13 September 2021</div>
+    <div class="container-fluid mt-5">
+      <div class="row justify-content-center title mb-3">Shipment Recapitulation & Billing Summary</div>
+      <div class="row justify-content-center mb-3">
+        <div class="col-md-4 col-lg-2">
+          <input type="date" class="form-control" id="" />
+        </div>
+      </div>
+      <div class="row justify-content-center mb-3">
+        <div class="col-md-4 col-lg-2 center">
+          <input type="date" class="form-control" id="" />
+        </div>
+      </div>
+      <div class="row justify-content-center mb-3">
+        <div class="mb-3 row col-md-2 col-lg-1 mx-auto">
+          <button type="button" class="btn btn3">Check</button>
+        </div>
       </div>
     </div>
 
